deployment/staging/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mmpl-do-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "test.mmpl.bennyda.ninja"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mmpl-do-service
                port:
                  number: 80
